Added viewUserList
